--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>2.0.17</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
